Refactor code structure for improved readability and maintainability

--- a/locations/aarhus/config.json
+++ b/locations/aarhus/config.json
@@ -2,7 +2,7 @@
   "id": "aarhus",
   "name": "Aarhus",
   "zoneLabel": "zone",
-  "overviewImage": "AarhusOffice.drawio.svg",
+  "overviewImage": "aarhus-building.svg",
   "zones": [
     {
       "id": "zone-1768997571876",
