Add tooltip for table name and update table positions in config

--- a/locations/aarhus/config.json
+++ b/locations/aarhus/config.json
@@ -23,8 +23,8 @@
           "name": "Table 2",
           "assignedUser": null,
           "position": {
-            "x": 21.008403361344538,
-            "y": 30.041119288109147
+            "x": 21.079880705167298,
+            "y": 30.395524696499514
           }
         },
         {
@@ -41,8 +41,8 @@
           "name": "Table 4",
           "assignedUser": null,
           "position": {
-            "x": 7.773109243697479,
-            "y": 41.10747949307298
+            "x": 8.875739244280968,
+            "y": 41.586864210968436
           }
         },
         {
@@ -50,8 +50,8 @@
           "name": "Table 5",
           "assignedUser": null,
           "position": {
-            "x": 19.642857142857142,
-            "y": 40.999515003268456
+            "x": 21.74556114848837,
+            "y": 41.758160223945
           }
         },
         {
@@ -59,8 +59,8 @@
           "name": "Table 6",
           "assignedUser": null,
           "position": {
-            "x": 35.50420168067227,
-            "y": 41.431372962486556
+            "x": 36.72337112321251,
+            "y": 41.70106155295281
           }
         },
         {
@@ -68,8 +68,8 @@
           "name": "Table 7",
           "assignedUser": null,
           "position": {
-            "x": 6.4075630252100835,
-            "y": 49.798620922337264
+            "x": 9.09763272538799,
+            "y": 49.523579478882624
           }
         },
         {
@@ -77,8 +77,8 @@
           "name": "Table 8",
           "assignedUser": null,
           "position": {
-            "x": 17.54201680672269,
-            "y": 50.28446112645762
+            "x": 22.411241591809443,
+            "y": 49.18098745292949
           }
         },
         {
@@ -86,8 +86,8 @@
           "name": "Table 9",
           "assignedUser": null,
           "position": {
-            "x": 36.44957983193277,
-            "y": 50.01454990194632
+            "x": 37.05621134487304,
+            "y": 49.066790110945114
           }
         },
         {
@@ -95,8 +95,8 @@
           "name": "Table 10",
           "assignedUser": null,
           "position": {
-            "x": 7.668067226890757,
-            "y": 59.407460514940006
+            "x": 8.653845763173944,
+            "y": 59.972636270453094
           }
         },
         {
@@ -104,8 +104,8 @@
           "name": "Table 11",
           "assignedUser": null,
           "position": {
-            "x": 18.80252100840336,
-            "y": 58.65170908630834
+            "x": 22.965975294577003,
+            "y": 59.63004424449997
           }
         },
         {
@@ -113,8 +113,8 @@
           "name": "Table 12",
           "assignedUser": null,
           "position": {
-            "x": 36.239495798319325,
-            "y": 58.81365582101512
+            "x": 38.498518972068695,
+            "y": 59.63004424449997
           }
         },
         {
@@ -122,8 +122,8 @@
           "name": "Table 13",
           "assignedUser": null,
           "position": {
-            "x": 7.668067226890757,
-            "y": 68.36851316871561
+            "x": 8.542899022620432,
+            "y": 67.90935284525214
           }
         },
         {
@@ -131,8 +131,8 @@
           "name": "Table 14",
           "assignedUser": null,
           "position": {
-            "x": 20.168067226890756,
-            "y": 68.28782779591252
+            "x": 22.965975294577003,
+            "y": 67.73805683227559
           }
         },
         {
@@ -140,8 +140,8 @@
           "name": "Table 15",
           "assignedUser": null,
           "position": {
-            "x": 36.029411764705884,
-            "y": 68.66570510387409
+            "x": 37.94378526930114,
+            "y": 67.62385949029121
           }
         },
         {
@@ -149,8 +149,8 @@
           "name": "Table 16",
           "assignedUser": null,
           "position": {
-            "x": 9.138655462184873,
-            "y": 77.03298835159458
+            "x": 8.653845763173944,
+            "y": 77.78742292690075
           }
         },
         {
@@ -158,8 +158,8 @@
           "name": "Table 17",
           "assignedUser": null,
           "position": {
-            "x": 20.69327731092437,
-            "y": 76.4931636259352
+            "x": 23.40976225679105,
+            "y": 77.73032425590854
           }
         },
         {
@@ -167,8 +167,8 @@
           "name": "Table 18",
           "assignedUser": null,
           "position": {
-            "x": 36.239495798319325,
-            "y": 76.38519868080333
+            "x": 38.60946571262221,
+            "y": 77.73032425590854
           }
         },
         {
@@ -176,8 +176,8 @@
           "name": "Table 19",
           "assignedUser": null,
           "position": {
-            "x": 9.34873949579832,
-            "y": 84.21265720286445
+            "x": 8.321005541513408,
+            "y": 83.49729002611957
           }
         },
         {
@@ -185,8 +185,8 @@
           "name": "Table 20",
           "assignedUser": null,
           "position": {
-            "x": 21.113445378151262,
-            "y": 83.83477989490288
+            "x": 23.63165573789808,
+            "y": 83.38309268413519
           }
         },
         {
@@ -194,8 +194,8 @@
           "name": "Table 21",
           "assignedUser": null,
           "position": {
-            "x": 35.50420168067227,
-            "y": 84.26663967543038
+            "x": 38.720412453175726,
+            "y": 83.21179667115864
           }
         },
         {
@@ -203,8 +203,8 @@
           "name": "Table 22",
           "assignedUser": null,
           "position": {
-            "x": 8.928571428571429,
-            "y": 92.95781775854653
+            "x": 8.321005541513408,
+            "y": 93.7179521337213
           }
         },
         {
@@ -212,8 +212,8 @@
           "name": "Table 23",
           "assignedUser": null,
           "position": {
-            "x": 20.798319327731093,
-            "y": 93.0657827036784
+            "x": 23.520708997344563,
+            "y": 93.43245877876035
           }
         },
         {
@@ -221,8 +221,44 @@
           "name": "Table 24",
           "assignedUser": null,
           "position": {
-            "x": 36.239495798319325,
-            "y": 93.49764248420591
+            "x": 38.387572231515186,
+            "y": 93.37536010776817
+          }
+        },
+        {
+          "id": "T25",
+          "name": "Table 25",
+          "assignedUser": null,
+          "position": {
+            "x": 68.67603240262399,
+            "y": 83.55438869711176
+          }
+        },
+        {
+          "id": "T26",
+          "name": "Table 26",
+          "assignedUser": null,
+          "position": {
+            "x": 87.31508481561401,
+            "y": 83.4401913551274
+          }
+        },
+        {
+          "id": "T27",
+          "name": "Table 27",
+          "assignedUser": null,
+          "position": {
+            "x": 68.01035195930292,
+            "y": 93.54665612074473
+          }
+        },
+        {
+          "id": "T28",
+          "name": "Table 28",
+          "assignedUser": null,
+          "position": {
+            "x": 87.86981851838158,
+            "y": 93.2611627657838
           }
         }
       ],
