--- a/locations/aarhus/config.json
+++ b/locations/aarhus/config.json
@@ -12,7 +12,7 @@
         {
           "id": "T1",
           "name": "Table 1",
-          "assignedUser": null,
+          "assignedUser": "mads.kildegaard@fellowmind.dk",
           "position": {
             "x": 8.403361344537815,
             "y": 30.203066022815932
@@ -21,7 +21,7 @@
         {
           "id": "T2",
           "name": "Table 2",
-          "assignedUser": null,
+          "assignedUser": "anna.tagesen@fellowmind.dk",
           "position": {
             "x": 21.079880705167298,
             "y": 30.395524696499514
@@ -30,7 +30,7 @@
         {
           "id": "T3",
           "name": "Table 3",
-          "assignedUser": null,
+          "assignedUser": "jon.eriksen@fellowmind.dk",
           "position": {
             "x": 35.50420168067227,
             "y": 30.203066022815932
@@ -39,7 +39,7 @@
         {
           "id": "T4",
           "name": "Table 4",
-          "assignedUser": null,
+          "assignedUser": "rasmus.glad@fellowmind.dk",
           "position": {
             "x": 8.875739244280968,
             "y": 41.586864210968436
@@ -48,7 +48,7 @@
         {
           "id": "T5",
           "name": "Table 5",
-          "assignedUser": null,
+          "assignedUser": "niels.vestergaard@fellowmind.dk",
           "position": {
             "x": 21.74556114848837,
             "y": 41.758160223945
@@ -57,7 +57,7 @@
         {
           "id": "T6",
           "name": "Table 6",
-          "assignedUser": null,
+          "assignedUser": "bent.abildskov.nielsen@fellowmind.dk",
           "position": {
             "x": 36.72337112321251,
             "y": 41.70106155295281
@@ -66,7 +66,7 @@
         {
           "id": "T7",
           "name": "Table 7",
-          "assignedUser": null,
+          "assignedUser": "henrik.aeroe@fellowmind.dk",
           "position": {
             "x": 9.09763272538799,
             "y": 49.523579478882624
@@ -75,7 +75,7 @@
         {
           "id": "T8",
           "name": "Table 8",
-          "assignedUser": null,
+          "assignedUser": "brian.hoegsberg@fellowmind.dk",
           "position": {
             "x": 22.411241591809443,
             "y": 49.18098745292949
@@ -84,7 +84,7 @@
         {
           "id": "T9",
           "name": "Table 9",
-          "assignedUser": null,
+          "assignedUser": "trine.morsing@fellowmind.dk",
           "position": {
             "x": 37.05621134487304,
             "y": 49.066790110945114
@@ -93,7 +93,7 @@
         {
           "id": "T10",
           "name": "Table 10",
-          "assignedUser": null,
+          "assignedUser": "sonja.haslund@fellowmind.dk",
           "position": {
             "x": 8.653845763173944,
             "y": 59.972636270453094
@@ -102,7 +102,7 @@
         {
           "id": "T11",
           "name": "Table 11",
-          "assignedUser": null,
+          "assignedUser": "emma.spatzek@fellowmind.dk",
           "position": {
             "x": 22.965975294577003,
             "y": 59.63004424449997
@@ -111,7 +111,7 @@
         {
           "id": "T12",
           "name": "Table 12",
-          "assignedUser": null,
+          "assignedUser": "anita.maria.emdal@fellowmind.dk",
           "position": {
             "x": 38.498518972068695,
             "y": 59.63004424449997
@@ -120,7 +120,7 @@
         {
           "id": "T13",
           "name": "Table 13",
-          "assignedUser": null,
+          "assignedUser": "lars.hammer@fellowmind.dk",
           "position": {
             "x": 8.542899022620432,
             "y": 67.90935284525214
@@ -129,7 +129,7 @@
         {
           "id": "T14",
           "name": "Table 14",
-          "assignedUser": null,
+          "assignedUser": "morten.jakobsen@fellowmind.dk",
           "position": {
             "x": 22.965975294577003,
             "y": 67.73805683227559
@@ -138,7 +138,7 @@
         {
           "id": "T15",
           "name": "Table 15",
-          "assignedUser": null,
+          "assignedUser": "hans.jorgensen@fellowmind.dk",
           "position": {
             "x": 37.94378526930114,
             "y": 67.62385949029121
@@ -147,7 +147,7 @@
         {
           "id": "T16",
           "name": "Table 16",
-          "assignedUser": null,
+          "assignedUser": "bjarke.fogh@fellowmind.dk",
           "position": {
             "x": 8.653845763173944,
             "y": 77.78742292690075
@@ -156,7 +156,7 @@
         {
           "id": "T17",
           "name": "Table 17",
-          "assignedUser": null,
+          "assignedUser": "michael.askjaer@fellowmind.dk",
           "position": {
             "x": 23.40976225679105,
             "y": 77.73032425590854
@@ -165,7 +165,7 @@
         {
           "id": "T18",
           "name": "Table 18",
-          "assignedUser": null,
+          "assignedUser": "",
           "position": {
             "x": 38.60946571262221,
             "y": 77.73032425590854
@@ -174,7 +174,7 @@
         {
           "id": "T19",
           "name": "Table 19",
-          "assignedUser": null,
+          "assignedUser": "andreas.moller@fellowmind.dk",
           "position": {
             "x": 8.321005541513408,
             "y": 83.49729002611957
@@ -183,7 +183,7 @@
         {
           "id": "T20",
           "name": "Table 20",
-          "assignedUser": null,
+          "assignedUser": "jesper.boegholm@fellowmind.dk",
           "position": {
             "x": 23.63165573789808,
             "y": 83.38309268413519
@@ -192,7 +192,7 @@
         {
           "id": "T21",
           "name": "Table 21",
-          "assignedUser": null,
+          "assignedUser": "andreas.mouritsen@fellowmind.dk",
           "position": {
             "x": 38.720412453175726,
             "y": 83.21179667115864
@@ -201,7 +201,7 @@
         {
           "id": "T22",
           "name": "Table 22",
-          "assignedUser": null,
+          "assignedUser": "lasse.hastrup@fellowmind.dk",
           "position": {
             "x": 8.321005541513408,
             "y": 93.7179521337213
@@ -210,7 +210,7 @@
         {
           "id": "T23",
           "name": "Table 23",
-          "assignedUser": null,
+          "assignedUser": "stephan.fuhlendorff@fellowmind.dk",
           "position": {
             "x": 23.520708997344563,
             "y": 93.43245877876035
@@ -219,7 +219,7 @@
         {
           "id": "T24",
           "name": "Table 24",
-          "assignedUser": null,
+          "assignedUser": "lasse.krogsgaard@fellowmind.dk",
           "position": {
             "x": 38.387572231515186,
             "y": 93.37536010776817
@@ -228,7 +228,7 @@
         {
           "id": "T25",
           "name": "Table 25",
-          "assignedUser": null,
+          "assignedUser": "patrick.thusing@fellowmind.dk",
           "position": {
             "x": 68.67603240262399,
             "y": 83.55438869711176
@@ -237,7 +237,7 @@
         {
           "id": "T26",
           "name": "Table 26",
-          "assignedUser": null,
+          "assignedUser": "rasmus.eriksen@fellowmind.dk",
           "position": {
             "x": 87.31508481561401,
             "y": 83.4401913551274
@@ -246,7 +246,7 @@
         {
           "id": "T27",
           "name": "Table 27",
-          "assignedUser": null,
+          "assignedUser": "franz.skaaning@fellowmind.dk",
           "position": {
             "x": 68.01035195930292,
             "y": 93.54665612074473
@@ -255,7 +255,7 @@
         {
           "id": "T28",
           "name": "Table 28",
-          "assignedUser": null,
+          "assignedUser": "kim.jonassen@fellowmind.dk",
           "position": {
             "x": 87.86981851838158,
             "y": 93.2611627657838
